<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_grey"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutPostedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:weightSum="2">


           <TextView
                android:textSize="12sp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:id="@+id/labelPostedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posted_by"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

           <TextView
               android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:id="@+id/textPostedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:id="@+id/layoutPostedOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:weightSum="2">

           <TextView
                android:textSize="12sp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:id="@+id/labelPostedOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posted_on"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />
           <TextView
               android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginLeft="2dp"
                android:id="@+id/textPostedOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="2">
           <TextView
                android:textSize="12sp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/post_file"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <ImageView
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:id="@+id/imagePostedFile"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="2">

           <TextView
                android:textSize="12sp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_type"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />
           <TextView
               android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:id="@+id/textPostType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="2">

           <TextView
                android:textSize="12sp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />
           <TextView
               android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:id="@+id/textHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_margin="@dimen/_5sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:textAllCaps="false"
                android:id="@+id/btn_Reject"
                android:background="@drawable/oval_red_border"
                android:layout_marginLeft="2dp"
                android:layout_width="55dp"
                android:layout_height="25dp"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:text="Reject"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textAllCaps="false"
                android:textSize="12sp"
                android:id="@+id/btn_View"
                android:background="@drawable/oval_blue_border"
                android:layout_marginLeft="10dp"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:textColor="@color/blue"
                android:text="View"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textAllCaps="false"
                android:textSize="12sp"
                android:id="@+id/btn_approve"
                android:background="@drawable/oval_green_border"
                android:layout_marginLeft="10dp"
                android:layout_width="55dp"
                android:layout_height="25dp"
                android:textColor="@color/green"
                android:text="Approve"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>